--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="We deal with all kind of plants and gardening needs"
+      content="Alhafeez.qa"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Qr Code</title>
+    <title>Alhafeez</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
